2005-11-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am(EXTRA_DIST): add doxygen.config.in
	(reported by Galen Seitz).
	* libc/stdio/vfscanf.c: include <stdlib.h> so strtod()
	is declared before using it.

2005-11-08 Anatoly Sokolov <aesok@pautinka.net>

	* libc/pmstring/strncat_P.S:  Make labels local, add Id line, 
	use X_movw when possible, use X_movw instead LOAD_X/LOAD_Z.
	* libc/pmstring/strncpy_P.S: (Ditto.)
	* libc/pmstring/memcpy_P.S:  Make labels local, add Id line, 
	use X_movw instead LOAD_X/LOAD_Z.
	* libc/pmstring/strcasecmp_P.S: (Ditto.)
	* libc/pmstring/strcat_P.S: (Ditto.)
	* libc/pmstring/strcmp_P.S: (Ditto.)
	* libc/pmstring/strcpy_P.S: (Ditto.)
	* libc/pmstring/strlcat_P.S: (Ditto.)
	* libc/pmstring/strlcpy_P.S: (Ditto.)
	* libc/pmstring/strlen_P.S: (Ditto.)
	* libc/pmstring/strncasecmp_P.S: (Ditto.)
	* libc/pmstring/strncmp_P.S: (Ditto.)
	* libc/pmstring/strnlen_P.S: (Ditto.)

2005-11-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Patch submitted by Colin O'Flynn.)
	* include/avr/wdt.h: protect wdt_disable against interrupts,
	resolves bug #14327 overview: wdt_disable() missing a cli

2005-11-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version date

2005-11-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/Makefile.am: add new subdir util/.
	* include/compat/deprecated.h: add inp/outp/sbi/cbi.
	* include/compat/ina90.h: add minimal doxygen documentation.
	* include/compat/twi.h: move to util/twi.h, leave stub.
	* include/avr/crc16.h: move to util/crc16.h, leave stub.
	* include/avr/delay.h: move to util/delay.h, leave stub.
	* include/avr/parity.h: move to util/parity.h, leave stub.
	* include/util/Makefile.am: (New file)
	* include/util/crc16.h: moved from avr/crc16.h.
	* include/util/delay.h: moved from avr/delay.h.
	* include/util/parity.h: moved from avr/parity.h.
	* include/util/twi.h: moved from compat/twi.h, doxygenified.
	* doc/examples/twitest/twitest.c: <compat/twi.h> -> <util/twi.h>